feat: add jwt
