# src/app.js
@@ -1,5 +1,8 @@
 import express from "express";
 import passenger from "./controllers/passenger.js";
+import account from "./controllers/account.js";
+import driver from "./controllers/driver.js";
+import privateRoute from "./middleware/privateRoute.js";
 import cors from "cors";
 import swaggerUi from "swagger-ui-express";
 import swaggerDocument from "./docs/swagger.json";
@@ -10,7 +13,9 @@ app.use(cors());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/passenger", passenger);
+app.use("/passenger", privateRoute, passenger);
+app.use("/account", account);
+app.use("/driver", privateRoute, driver);
 
 // Errors request - Put in a middleware
 app.use((req, res, next) => {
